# cte-loglife-automation

./: .env.example  .gitignore  AUTO_UPDATE_GUIDE.md  BUILD_GUIDE.md  CTe LogLife 3.0.spec  CTe_LogLife.spec  Endereços.xlsx  INSTALLATION.md  LICENSE  QUICK_START_UPDATE.md  README.md  REFACTORING_PLAN.md  UPDATE_IMPLEMENTATION_SUMMARY.md  bot.py  build_exe.ps1  build_installer.ps1  functions.py  hook-cv2-fix.py  hook-cv2.py  installer_script.iss  pyproject.toml  requirements-build.txt  requirements-compatible.txt  requirements.txt  test_resource_loading.py  test_update_system.py  test_version_loading.py  update_config.ini
botCTE/: CTE_COMPLEMENTARY_IMPLEMENTATION.md  LogLife.spec  LogLife_v1.2.spec  MANIFEST.in  README.md  Upload-29-03-2023-20-02.csv  VERSION  botCTE.botproj  requirements.txt  setup.py
botCTE/botCTE/: .env.template  Alíquota.xlsx  AssociarPDF.csv  Base.py  Billing.xlsx  CTe LogLife 2.5.spec  CTe LogLife 2.9.spec  CTe simbólico.xlsx  CTes.xlsx  Complementares (new).xlsx  Complementares.xlsx  Debug.xlsx  Fornecedores.xlsx  ServicesAPI.xlsx  Test.py  Teste.xlsx  UploadCTE.csv  auto_updater.py  bot.py  emissions.py  endereços.xlsx  filename.txt  folderpath2.txt  functions.py  manifest.xml  relatorio_bsoft.txt  relatorio_target.txt  version_checker.py
botCTE/botCTE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
